--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "15"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "39170"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "24649428"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "0               81.8778       74.9809%          85.8055%          65.1723%  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,6 +588,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Schools            object\n",
+       "Total Students           object\n",
+       "Total Budget             object\n",
+       "Average Math Score       object\n",
+       "Average Reading Score    object\n",
+       "% Passing Math           object\n",
+       "% Passing Reading        object\n",
+       "% Overall Passing        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_summary_df.dtypes"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -597,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +650,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +688,7 @@
        "Name: Student Name, dtype: int64"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +726,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1088,7 @@
        "Wright High School              90.3333  "
       ]
      },
-     "execution_count": 243,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1233,7 +1261,7 @@
        "Pena High School              90.5405  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1412,7 @@
        "Johnson High School             53.5392  "
       ]
      },
-     "execution_count": 245,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1609,7 @@
        "Wright High School           83.644986  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1827,7 @@
        "Wright High School           84.073171  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2216,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 250,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2203,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2217,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2344,7 @@
        "$645-680                               53.526867  "
       ]
      },
-     "execution_count": 252,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2345,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2679,7 +2707,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2698,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2712,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2796,7 +2824,7 @@
        "Large (2000-5000)           82.766625          58.286013  "
       ]
      },
-     "execution_count": 256,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2826,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2840,7 +2868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2912,7 +2940,7 @@
        "District             80.799057          53.672214  "
       ]
      },
-     "execution_count": 260,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
